# A-UI

./: .eslintrc.json  .gitignore  DESIGN-GUIDE.md  PROJECT-ROADMAP.md  README.md  arch.mermaid  cicd.ts  claude-mcp.mc  code.mermaid  implementation.md  index.html  jest.config.js  multi-modal-hyper-graph.mermaid  orchestrator.ts  package.json  plan.md  pm.ts  pnpm-lock.yaml  requirements-v2.txt  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts
server/: .dockerignore  Dockerfile  alembic.ini  dev.py  docker-compose.yml  pyproject.toml  requirements.txt  tsconfig.server.json
server/alembic/: env.py
server/alembic/versions/: 4619e14311fc_create_command_history_tables.py  596ae28e39ad_add_audit_log_table.py
server/app/: __init__.py  config.py  dependencies.py  main.py
server/app/core/: auth.py  error_handlers.py  exceptions.py  monitoring.py  notifications.py  sse.py  websocket.py
server/app/db/: session.py
server/app/models/: __init__.py  audit_log.py  base.py  chat.py  code.py  command_history.py  command_pattern.py  command_schedule.py  command_template.py  discussion.py  knowledge.py  notification.py  user.py
server/app/routes/: api.py  auth.py  chat.py  code.py  knowledge.py  progress.py
server/app/services/: CommandExecutionService.py  CommandHistoryService.py  CommandSchedulerService.py  CommandTemplateService.py  __init__.py  agent_orchestrator.py  classification.py  code_chunker.py  code_embedding.py  code_embedding_generator.py  code_tokenizer.py  context_management.py  dspy_agents.py  knowledge.py  knowledge_extraction.py  vector_store.py  (+2 more)
(+160 files in other folders)
