[tool.poetry]
name = "a-ui-server"
version = "0.1.0"
description = "FastAPI backend for A-UI multi-agent discussion arena"
authors = ["Your Name <your.email@example.com>"]
package-mode = false
[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.4"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
httpx = "^0.25.0"
redis = "^5.0.1"
chromadb = "^0.4.22"
numpy = "<2.0.0"
alembic = "^1.12.0"
prometheus-client = "^0.17.0"
websockets = "^11.0.3"
aiosqlite = "^0.21.0"
transformers = "^4.51.3"
torch = "^2.7.0"
tree-sitter-languages = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3 